[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkdocs-exporter"
version = "4.0.2"
repository = "https://github.com/adrienbrignon/mkdocs-exporter"
keywords = ["mkdocs", "pdf", "exporter"]
description = "A highly-configurable plugin for MkDocs that exports your pages to PDF files."
authors = ["Adrien Brignon <adrien@brignon.dev>"]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
]

[tool.poetry.dependencies]
python = ">=3.7"
mkdocs = ">=1.4"
playwright = ">=1.33"
beautifulsoup4 = ">=4.12.2"
lxml = ">=4.9"
libsass = ">=0.22.0"
importlib-resources = ">=5.0"
importlib-metadata = "<5.0"
nest-asyncio = ">=1.5.6"

[tool.poetry.plugins."mkdocs.plugins"]
"mkdocs/exporter" = "mkdocs_exporter.plugin:Plugin"
"mkdocs/exporter/pdf" = "mkdocs_exporter.plugins.pdf.plugin:Plugin"
"mkdocs/exporter/extras" = "mkdocs_exporter.plugins.extras.plugin:Plugin"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adrienbrignon/mkdocs-exporter/issues"

[tool.poetry.group.dev.dependencies]
flake8 = "<4"
mkdocs-material = "^9.1.11"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-redirects = "^1.2.0"
mkdocs-material-extensions = "^1.1.1"
mdx-truly-sane-lists = "^1.3"
