[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkdocs-exporter"
version = "6.2.0"
repository = "https://github.com/adrienbrignon/mkdocs-exporter"
keywords = ["mkdocs", "pdf", "exporter"]
description = "A highly-configurable plugin for MkDocs that exports your pages to PDF files."
authors = ["Adrien Brignon <adrien@brignon.dev>"]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
mkdocs = ">=1.4"
playwright = ">=1.33"
beautifulsoup4 = ">=4.12.2"
lxml = ">=4.9"
libsass = ">=0.22.0"
pypdf = ">=4.2.0"

[tool.poetry.plugins."mkdocs.plugins"]
"exporter" = "mkdocs_exporter.plugin:Plugin"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adrienbrignon/mkdocs-exporter/issues"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0"
mkdocs-material = {version="^9.4.11", extras=["imaging"]}
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-redirects = "^1.2.0"
mdx-truly-sane-lists = "^1.3"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-git-committers-plugin-2 = "^2.3.0"
bandit = "^1.7.9"
